--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 	],
 	"require": {
 		"windwalker/framework": "dev-staging",
-		"asika/joomla-console": "*",
+		"asika/joomla-console": "1.1.*",
 		"asika/php-code-generator": "0.1.*",
 		"joomla/registry": "~1.0",
 		"filp/whoops": "1.*"
