--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "windwalker/joomla-rad",
 	"description": "Rapido de la vento viro.",
 	"license": "GNU Lesser General Public License",
-	"minimum-stability": "dev",
+	"minimum-stability": "beta",
 	"authors": [
 		{
 			"name": "Simon Asika",
@@ -10,7 +10,7 @@
 		}
 	],
 	"require": {
-		"windwalker/framework": "dev-staging",
+		"windwalker/framework": "dev-master",
 		"asika/joomla-console": "1.1.*",
 		"asika/php-code-generator": "0.1.*",
 		"joomla/registry": "~1.0",
