--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,13 @@
         "filp/whoops": "1.*"
     },
     "require-dev": {
+        "windwalker/test": "~2.0"
     },
     "autoload": {
         "psr-4": {
             "": "../../cli/windwalker",
-            "Windwalker\\": "src"
+            "Windwalker\\": "src",
+            "Windwalker\\Test\\": "test"
         }
     },
     "scripts": {
