--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "windwalker/filesystem": "~2.0@stable",
         "windwalker/console": "~2.0@stable",
         "asika/php-code-generator": "~2.0@stable",
+        "asika/muse": "~1.0@stable",
         "joomla/string": "~1.0@stable",
         "symfony/yaml": "2.*",
         "filp/whoops": "1.*"
