--- a/composer.json
+++ b/composer.json
@@ -43,5 +43,10 @@
     ],
     "config": {
         "bin-dir": "../../bin"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.1-dev"
+        }
     }
 }
