--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,10 @@
 	],
 	"config": {
 		"bin-dir": "../../bin"
-	}
+	},
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.1-dev"
+        }
+    }
 }
