--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit bootstrap="test/bootstrap.php" colors="false"
+<phpunit bootstrap="test/bootstrap.php"
+	colors="false"
 	convertErrorsToExceptions="true"
 	convertNoticesToExceptions="true"
 	convertWarningsToExceptions="true"
@@ -8,6 +9,9 @@
 	>
 	<php>
 		<ini name="error_reporting" value="32767" />
+
+		<server name="HTTP_HOST" value="rad.windwalker.io"/>
+		<server name="REQUEST_URI" value="/flower/sakura"/>
 
 		<const name="WINDWALKER_TEST_CURL_HELPER" value="0" />
 		<const name="WINDWALKER_TEST_GOOGLE_TRANSLATE" value="0" />
