--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ php:
 
 matrix:
   allow_failures:
-    - php: 7.0
     - php: hhvm
 
 before_script:
@@ -18,13 +17,19 @@ before_script:
   - cd /home/travis/build
   - git clone https://github.com/asika32764/joomla-cmf.git joomla
   - cd joomla
-  - cp -r $TRAVIS_BUILD_DIR libraries/windwalker
-  - mkdir libraries/windwalker-bundles
 
   # Import SQL
-  - cp libraries/windwalker/resource/travis/configuration.dist.php configuration.php
+  - cp $TRAVIS_BUILD_DIR/resource/travis/configuration.dist.php configuration.php
   - mysql -e 'CREATE DATABASE windwalker_test;'
   - php cli/console sql import default -y
+
+  # Remove current windwalker
+  - rm -rf libraries/windwalker
+  - rm bin/windwalker
+
+  # Install current test version
+  - cp -r $TRAVIS_BUILD_DIR libraries/windwalker
+  - mkdir libraries/windwalker-bundles
 
   # Prapare Test
   - cd libraries/windwalker
