--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
     - php: 7.4snapshot
     - php: nightly
   allow_failures:
+    - php: 5.3
     - php: 7.4snapshot
     - php: nightly
 
