--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit bootstrap="test/bootstrap.php"
-	colors="false"
-	convertErrorsToExceptions="true"
-	convertNoticesToExceptions="true"
-	convertWarningsToExceptions="true"
-	strict="true"
-	syntaxCheck="true"
-	>
+<phpunit bootstrap="test/bootstrap.php" colors="true">
 	<php>
 		<ini name="error_reporting" value="32767" />
 
